<resources>
    <string name="app_name">闰土</string>
    <string name="login_username_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_protocol">我同意《閏土电商协议》并遵守规则</string>
    <string name="forget_password">忘记密码?</string>
    <string name="regist">注册</string>
    <string name="regist_phone_num_hint">11位手机号码</string>
    <string name="regist_phone_vc_hint">手机验证码</string>
    <string name="pwd_hint">6-32位密码</string>
    <string name="confirm_pwd_hint">请再次输入密码</string>
    <string name="password">密码</string>
    <string name="personal_center">个人中心</string>
    <string name="business_dynamics">客商动态</string>
    <string name="circulation_of_property_rights">产权流转</string>
    <string name="rural_tourism">乡村旅游</string>
    <string name="logistics_distribution">物流直配</string>
    <string name="entrepreneurship_training">创业培训</string>
    <string name="online_market">农资农机在线市场</string>
    <string name="quality_resources">优质资源</string>
    <string name="credit_transaction">诚信交易</string>
    <string name="security_deposit">押金保障</string>
    <string name="authentication">实名认证</string>
    <string name="manage_site">管理收获地点</string>
    <string name="order_details">订单详情</string>
    <string name="personal_data">个人资料</string>
    <string name="my_release">我的发布</string>
    <string name="my_adoption">我的领养</string>
    <string name="setting">设置</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="show_all_order">查看所有订单</string>
    <string name="order_state">状态：</string>
    <string name="order_totle_price">总价：</string>
    <string name="order_seach_hint">商品名称/商品编号/订单号</string>
    <string name="all_orders">全部订单</string>
    <string name="pending_payment_order">待付款</string>
    <string name="receipt_of_goods_order">待收货</string>
    <string name="completed_order">已完成</string>
    <string name="confirm_the_payment">确认付款</string>
    <string name="change">更改</string>
    <string name="amount">购买数量</string>
    <string name="total_commodity_price">商品价格合计：</string>
    <string name="distribution_mode">配送方式：</string>
    <string name="postage">邮费：</string>
    <string name="total_price">价格合计：</string>
    <string name="manage_receipt_address">管理收货地址</string>
    <string name="set_as_default_address">设为默认地址</string>
    <string name="delete">删除</string>
    <string name="add_new_address">添加新地址</string>
    <string name="add_receipt_phone_number">联系电话：</string>
    <string name="consignee">收货人：</string>
    <string name="local_area">所在地区：</string>
    <string name="detailed_address_hint">请填写详细地址</string>
    <string name="cancel">取消</string>
    <string name="get_permission_msg">应用程序需要下列权限才能正确运行。请授权。</string>
    <string name="get_permission_fail_msg">未能获得权限，应用程序将退出</string>
    <string name="denied_permission_msg">如果应用程序没有访问相关权限，此应用程序可能无法正常工作。打开应用程序设置来修改应用程序权限。</string>
    <string name="version_description">版本说明</string>
    <string name="help">帮助</string>
    <string name="other_user_login">其他用户登录</string>
    <string name="suggestions">意见反馈</string>
    <string name="message_notification">消息通知</string>
    <string name="about_us">关于我们</string>
    <string name="phone_qq">手机或QQ</string>
    <string name="logo_down_font">闰土，给您天然的味道！</string>
    <string name="tow_code_down_font">让您的朋友扫描二维码，就可以下载闰土客户端！</string>
    <string name="special_declaration">特别声明</string>
    <string name="latest_version">最新版本</string>
    <string name="version_number">V1.0.0</string>
    <string name="statement_content">闰土再次声明，您通过本软件参加的商业活动，与Applelnc.无关</string>
    <string name="aboutus_content">\t\t闰土电商是响应国家互联网+政策号召打造的互联网农业综合平台，目标是打通“城市-农村”信息化对接通道，解决农产品供求不畅的矛盾，构建以信息化平台为核心的农产品信息发布和交易服务体系。农卖网实行全免费的运营模式，具有信息发布及时、针对性强、覆盖面广的特色，可以实现网上供求信息的智能匹配和在线交易服务，其农业招商信息及时发布和简易上手的搜索功能可帮助供求双方快速捕获商机。</string>
    <string name="help_question1">问：我的信用为什么会减少？</string>
    <string name="help_question1_case_as_follows">信用减少的原因如下：</string>
    <string name="help_question1_case1">被用户举报违规信息并被确认属实</string>
    <string name="help_question1_case1_result">-1</string>
    <string name="help_question1_case2">信息判为中介</string>
    <string name="help_question1_case2_result">-3</string>
    <string name="help_question1_case3">锁定账户</string>
    <string name="help_question1_case3_result">信用减半</string>
    <string name="help_question2">问：如何增加信用？</string>
    <string name="help_question2_case_as_follows">信用可以通过以下方式增加：</string>
    <string name="help_question2_case1">邮箱验证</string>
    <string name="help_question2_case1_result">+50</string>
    <string name="help_question2_case2">从业资格证书验证</string>
    <string name="help_question2_case2_result">+100</string>
    <string name="help_question2_case3">企业验证</string>
    <string name="help_question2_case3_result">+210</string>
    <string name="help_question2_case4">生活服务网邻通用户第一年赠送</string>
    <string name="help_question2_case4_result">+150</string>
    <string name="help_question2_case5">生活服务网邻通用户第二年赠送</string>
    <string name="help_question2_case5_result">+200</string>
    <string name="help_question2_case6">生活服务网邻通用户第三年赠送</string>
    <string name="help_question2_case6_result">+200</string>
    <string name="help_question2_case7">手机验证</string>
    <string name="help_question2_case7_result">+100</string>
    <string name="help_question2_case8">身份验证</string>
    <string name="help_question2_case8_result">+150</string>
    <string name="help_question2_case9">置顶在线时间满100小时（可累计）</string>
    <string name="help_question2_case9_result">+5</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="real_name">真实姓名</string>
    <string name="sex">性别</string>
    <string name="identity">身份</string>
    <string name="date_of_birth">出生日期</string>
    <string name="address_information">地址信息</string>
    <string name="registered_mobile_phone">注册手机</string>
    <string name="password_modification">密码修改</string>
    <string name="nickname_data">洛川果哥</string>
    <string name="real_name_data">吴江</string>
    <string name="sex_data_male">男</string>
    <string name="sex_data_female">女</string>
    <string name="identity_data">果农</string>
    <string name="date_of_birth_data">1975-05-23</string>
    <string name="address_information_province">省</string>
    <string name="address_information_city">市</string>
    <string name="address_information_district_and_county">区县</string>
    <string name="address_information_Town">镇</string>
    <string name="registered_mobile_phone_data">15686036075</string>
    <string name="write_personal_nickname">个人昵称：</string>
    <string name="write_real_name">真实姓名:</string>
    <string name="write_sex">性别：</string>
    <string name="write_identity">身份选择：</string>
    <string name="write_date_of_birth">出生日期:</string>
    <string name="write_email">邮箱：</string>
    <string name="write_address_information">地址信息：</string>
    <string name="write_head_portrait">个人头像：</string>
    <string name="want_release">我要发布</string>
    <string name="choice_release_content">选择要发布的产权内容</string>
    <string name="property_type">产权类型</string>
    <string name="property_position">产权位置</string>
    <string name="transfer_mode">流转方式</string>
    <string name="measure_area">面积</string>
    <string name="transfer_term">流转年限</string>
    <string name="price">价格</string>
    <string name="release_time">发布时间</string>
    <string name="please_input">请输入</string>
    <string name="mu">亩</string>
    <string name="year">年</string>
    <string name="million_yuan">万元</string>
    <string name="input_release_property_details">请输入发布的产权详情</string>
    <string name="title">标题</string>
    <string name="detailed_description">详细说明</string>
    <string name="release_person">发布人</string>
    <string name="contact_information">联系方式</string>
    <string name="verification_code">验证码</string>
    <string name="add_photos">添加照片</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_mobile_phone_number">请输入手机号</string>
    <string name="input_title">请输入标题</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="input_detailed_description">请输入详细说明</string>
    <string name="add_photos_describe">有照片的电话量会提高50%</string>
    <string name="property_details">产权详情</string>
    <string name="property_details_title">西安户县46亩果园，10年树龄</string>
    <string name="browse_times">21次</string>
    <string name="property_details_time">2016-09-12</string>
    <string name="property_details_money">¥96</string>
    <string name="property_basic_details">产权基本信息</string>
    <string name="area_size">面积大小</string>
    <string name="region">地区</string>
    <string name="region_data">陕西/西安/户县</string>
    <string name="property_type_data">园地/果园</string>
    <string name="area_size_data">46亩</string>
    <string name="transfer_term_data">9年</string>
    <string name="transfer_mode_data">转让</string>
    <string name="seller_description">卖家说明</string>
    <string name="seller_description_data">树龄为15年的树，靠近210国道，可作为采摘园，因特殊情况，亟虚转让，非诚勿扰！！！</string>
    <string name="property_details_person">刘先生</string>
    <string name="property_details_float_money">¥96万元</string>
    <string name="business_dynamics_search_hint">富士收购/药材柴胡/玉米收购</string>
    <string name="merchants_release">客商发布</string>
    <string name="merchants_msg">客商信息</string>
    <string name="household_release">农户发布</string>
    <string name="merchants_dynamic">客商动态</string>
    <string name="i_am_merchants">我是客商</string>
    <string name="i_am_household">我是农户</string>
    <string name="select_release_type_byidentity">根据您的身份选择要发布的类型</string>
    <string name="right_arrow">></string>
    <string name="entrepreneurship_training_title_city">延安</string>
    <string name="entrepreneurship_training_title_county">洛川</string>
    <string name="entrepreneurship_training_content_title">陕西青年农场主培训班11日开班</string>
    <string name="entrepreneurship_training_release_time">发布时间：</string>
    <string name="entrepreneurship_training_release_time_data">2016-09-12</string>
    <string name="entrepreneurship_training_browse_volume">浏览量</string>
    <string name="entrepreneurship_training_browse_volume_data">86</string>
    <string name="entrepreneurship_training_content_data">根据《陕西省“现代青年农场主计划”实施方案》的通知要求，结合我省实际，团省委、省农业厅、省教育厅计划2016年在陕西省团校培育100名现代青年农场主，现面向全省种养大户、家庭农场经营者、农民合作社骨干根据《陕西省“现代青年农场主计划”实施方案》的通知要求，结合我省实际，团省委、省农业厅、省教育厅计划2016年在陕西省团校培育100名现代青年农场主，现面向全省种养大户、家庭农场经营者、农民合作社骨干根据《陕西省“现代青年农场主计划”实施方案》的通知要求，结合我省实际，团省委、省农业厅、省教育厅计划2016年在陕西省团校培育100名现代青年农场主，现面向全省种养大户、家庭农场经营者、农民合作社骨干</string>
    <string name="entrepreneurship_training_organizer_data">组织者：团省委、省农业厅、省教育厅</string>
    <string name="entrepreneurship_training_training_phone_data">咨询电话：029-87300214【查看】</string>
    <string name="entrepreneurship_training_training_time_data">培训时间：2016.09.20-2016.11.30</string>
    <string name="entrepreneurship_training_training_place_data">洛川县农业局三楼</string>
    <string name="choice_purchase_class_type">选择要求购的产类类型</string>
    <string name="acquisition_type">收购类型</string>
    <string name="input_detailed_content">请输入详细内容</string>
    <string name="production_requirement">产区要求</string>
    <string name="choice_release_class_type">选择要发布的产类类型</string>
    <string name="product_type">产品类型</string>
    <string name="Agricultural_products_place">农品产地</string>
    <string name="cpr_search_hint">土地流转/老宅出售/果园承包</string>
    <string name="latest_release">最新发布</string>
    <string name="confirm">确定</string>
    <string name="rural_tourism_search_hint">礼泉袁家村/陕北民宿</string>
    <string name="rural_tourism_info">景点信息：</string>
    <string name="rural_tourism_name">景点名称：</string>
    <string name="rural_tourism_phone">电话咨询：</string>
    <string name="rural_tourism_location">地理位置：</string>
    <string name="rural_tourism_introduce">景点介绍</string>
    <string name="entrepreneurship_training_search_hint">技术培训/洛川培训</string>
    <string name="entrepreneurship_training_msg">培训信息</string>
</resources>