<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/contentbg"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#ff9900"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/back_Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:scaleType="centerInside"
            android:src="@drawable/reg_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/help"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_below="@+id/relativeLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_question1"
                android:textStyle="bold"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/help_question1_case_as_follows"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question1_case1"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question1_case1_result"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question1_case2"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question1_case2_result"/>

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question1_case3"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question1_case3_result"/>
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_question2"
                android:textStyle="bold"
                android:textSize="15dp"
                android:paddingTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/help_question2_case_as_follows"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question2_case1"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question2_case1_result"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question2_case2"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question2_case2_result"/>

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question2_case3"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question2_case3_result"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question2_case4"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question2_case4_result"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question2_case5"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question2_case5_result"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question2_case6"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question2_case6_result"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question2_case7"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question2_case7_result"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question2_case8"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question2_case8_result"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_column="1"
                        android:background="@null"
                        android:text="@string/help_question2_case9"/>

                    <TextView
                        android:layout_column="2"
                        android:background="@null"
                        android:gravity="center_vertical|right"
                        android:text="@string/help_question2_case9_result"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>