<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentbg">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ff9900"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/back_Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:scaleType="centerInside"
            android:src="@drawable/reg_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/order_details"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            android:src="@mipmap/logo" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:background="@drawable/shape_no_left_right_line_order_menu"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="4">


        <TextView
            android:id="@+id/order_all_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all_orders" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#B7B7B7" />

        <TextView
            android:id="@+id/pending_payment_order_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pending_payment_order" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#B7B7B7" />

        <TextView
            android:id="@+id/receipt_of_goods_order_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/receipt_of_goods_order" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#B7B7B7" />

        <TextView
            android:id="@+id/completed_order_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/completed_order" />
    </LinearLayout>

    <com.baoyz.widget.PullRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_below="@+id/menu_LL"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/order_Lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:dividerHeight="20dp"
            android:fadingEdge="none"
            android:listSelector="@android:color/transparent"
            android:scrollbarStyle="outsideOverlay" />
    </com.baoyz.widget.PullRefreshLayout>

</RelativeLayout>
